Fixing game visible and error messages

--- a/client/style.css
+++ b/client/style.css
@@ -35,7 +35,7 @@ h1 {
 	line-height: 1.1;
 }
 #game {
-	display: flex;
+	display: none;
 	padding: 0px;
 	margin: 0px;
 	border: none;
